# cnavy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  cnavy.cpp
cmake/: doctest_force_link_static_lib_in_target.cmake
data_input/: file.cpp  file_text.cpp  input.hpp  input_webpage.hpp  test.cpp
examples/: generic_example.cpp
include/cnavy/: cnavy.hpp
include/cnavy/crawler/: file.hpp  input.hpp  input_text.hpp  input_webpage.hpp
include/cnavy/rsm/: resource.hpp  resources.hpp
include/cnavy/tools/: shared_objects.hpp
include/cnavy/tools/shared/: shared_objects_decl.hpp  shared_objects_def.cpp
include/cnavy/xtess/characters/character/: basic_character.hpp
include/cnavy/xtess/characters/characters/: characters.hpp  compare_characters.hpp  shared_characters.hpp  static_compare_characters.hpp
include/cnavy/xtess/characters/raw_token/: basic_token.hpp  raw_token.hpp  reference_token.hpp
libraries/sqlite/: CMakeLists.txt
resources/: resource.cpp  resource.hpp  resources.cpp  resources.hpp
resources/test/: resource_test.cpp  resources_test.cpp
src/crawler/: CMakeLists.txt  backup.txt  input.cpp
src/crawler/files/: CMakeLists.txt
src/crawler/text/: CMakeLists.txt  input_text.cpp
src/crawler/web/: CMakeLists.txt  input_webpage.cpp
src/rsm/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/bool_set/: bool_set.cpp
src/xtess/: CMakeLists.txt
src/xtess/characters/: CMakeLists.txt
src/xtess/characters/character/: CMakeLists.txt  basic_character.cpp
src/xtess/characters/characters/: CMakeLists.txt  characters.cpp  summary_characters.cpp
src/xtess/characters/raw_token/: CMakeLists.txt  basic_token.cpp  raw_token.cpp  raw_token.hpp  raw_token_decl.hpp  raw_token_def.cpp  reference_token.cpp
src/xtess/components/: CMakeLists.txt  components.cpp
src/xtess/components/tokeniser/: CMakeLists.txt
src/xtess/components/tokeniser/basic_tokeniser/: basic_tokeniser.cpp
src/xtess/components/tokeniser/basic_tokeniser/include/: basic_tokeniser.hpp
src/xtess/components/tokeniser/raw_tokeniser/: raw_tokenise.hpp  raw_tokenise_decl.hpp  raw_tokenise_def.cpp
tests/: CMakeLists.txt  tests.cpp  tests_proto.cpp
tests/crawler/: CMakeLists.txt  file_test.cpp  input_text_test.cpp  input_webpage_test.cpp
tests/crawler/helpers/: enable_crawler_test.cpp  enable_crawler_test.hpp
tests/helpers/: enable_doctest.cpp  enable_doctest.hpp
tests/rsm/: CMakeLists.txt  resource_test.cpp  resources_test.cpp
tests/rsm/helpers/: enable_rsm_test.cpp  enable_rsm_test.hpp
tests/tools/: CMakeLists.txt
tests/tools/helpers/: enable_tools_test.cpp  enable_tools_test.hpp
tests/tools/shared_objects/: shared_characters_test.cpp  shared_objects_test.cpp
tests/tools/shared_objects/test/: shared_objects_test.cpp
tests/xtess/: CMakeLists.txt
tests/xtess/characters/: CMakeLists.txt
tests/xtess/characters/character/: character_test.cpp  line_character_test.cpp
tests/xtess/characters/characters/: bool_characters_test.cpp  characters_test.cpp  compare_characters_test.cpp  static_compare_characters_test.cpp  summary_characters_test.cpp
tests/xtess/characters/helpers/: enable_characters_test.cpp  enable_characters_test.hpp
tests/xtess/characters/raw_token/: raw_token_test.cpp  reference_token_test.cpp
tests/xtess/components/: CMakeLists.txt
tests/xtess/components/helpers/: enable_xtess_components_test.cpp  enable_xtess_components_test.hpp
tests/xtess/components/tokeniser/: CMakeLists.txt
tests/xtess/components/tokeniser/basic_tokeniser/: basic_tokeniser_test.cpp
tests/xtess/components/tokeniser/helpers/: enable_xtess_tokeniser_test.cpp  enable_xtess_tokeniser_test.hpp
tests/xtess/components/tokeniser/raw_tokeniser/: raw_tokenise_test.cpp
tests/xtess/helpers/: enable_xtess_test.cpp  enable_xtess_test.hpp
text_preccessing/character/: character.cpp  character.hpp  character_compute.cpp  compute_line_character.cpp  line_character.cpp  line_character.hpp
text_preccessing/character/test/: character_test.cpp
text_preccessing/characters/: bool_characters.cpp  bool_characters.hpp  bool_set.cpp  bool_set.hpp  characters.cpp  characters.hpp  characters_token.cpp  compare_characters.cpp  ratio_characters.cpp  ratio_characters.hpp  static_compare_characters.cpp  static_compare_characters.hpp  summary_characters.cpp  summary_characters.hpp
text_preccessing/characters/test/: bool_characters_test.cpp  characters_test.cpp  compare_characters_test.cpp  static_compare_characters_test.cpp  summary_characters_test.cpp
text_preccessing/line/: Line_Character.cpp  Line_Character.hpp
text_preccessing/shared/: shared_characters.cpp  shared_objects.hpp  shared_objects_decl.hpp  shared_objects_def.cpp
text_preccessing/shared/test/: shared_characters_test.cpp  shared_objects_test.cpp
text_preccessing/token/: characters_token.cpp  characters_token.hpp  raw_tokenise_decl.hpp  raw_tokenise_def.cpp  reference_token.cpp  reference_token.hpp
text_preccessing/token/test/: raw_token_test.cpp  raw_tokenise_test.cpp  reference_token_test.cpp
xtess/character/: character.hpp  compute_line_character.cpp  line_character.cpp  line_character.hpp
xtess/characters/: bool_set.hpp  characters.cpp  static_compare_characters.hpp
xtess/characters/test/: bool_characters_test.cpp  summary_characters_test.cpp
xtess/shared/: shared_characters.hpp  shared_objects_decl.hpp  shared_objects_def.cpp
xtess/token/: raw_token.hpp  raw_tokenise_decl.hpp  reference_token.cpp  reference_token.hpp
xtess/token/test/: raw_tokenise_test.cpp  reference_token_test.cpp
